Closed
Bug 677080
Opened 14 years ago
Closed 14 years ago
IonMonkey: Assertion failure: regs.pc == script->code, at jsinterp.cpp:2046
Categories
(Core :: JavaScript Engine, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: adrake, Assigned: dvander)
References
Details
Attachments
(2 files)
|
117 bytes,
application/javascript
|
Details | |
|
1.82 KB,
patch
|
sstangl
:
review+
|
Details | Diff | Splinter Review |
With --ion --ion-gvn=off (and either register allocator), the attached test case trips this assert. Note that GVN isn't the cause, but it permutes the code in such a way that it trips bug 677066 and masks this one.
| Assignee | ||
Comment 1•14 years ago
|
||
Basically a bogus assert.
Comment 2•14 years ago
|
||
Comment on attachment 551374 [details] [diff] [review]
fix
Review of attachment 551374 [details] [diff] [review]:
-----------------------------------------------------------------
For note, this patch is acceptable because bailouts may resume interpretation from a position other than the start of a function.
Attachment #551374 -
Flags: review?(sstangl) → review+
| Assignee | ||
Comment 3•14 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•