Use special interp mode for bailouts (bug 677080, r=sstangl).