js/src/jsinterp.h
@@ -248,7 +248,8 @@ enum InterpMode
     JSINTERP_NORMAL    = 0, /* interpreter is running normally */
     JSINTERP_RECORD    = 1, /* interpreter has been started to record/run traces */
     JSINTERP_SAFEPOINT = 2, /* interpreter should leave on a method JIT safe point */
-    JSINTERP_PROFILE   = 3  /* interpreter should profile a loop */
+    JSINTERP_PROFILE   = 3, /* interpreter should profile a loop */
+    JSINTERP_BAILOUT   = 4  /* interpreter is running from an Ion bailout */
 };
 
 /*
