js/src/jit-test/tests/ion/bug677080.js
@@ -1,0 +1,8 @@
+function f0(p0) {
+    var v0;
+    if (v0)
+        v0 = (p0 & p0);
+    while (v0 & v0)
+        break;
+}
+print(f0(0));
